解决了传输的秘文解密
